--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     html, body {
       height: 100%;
       font-family: 'Yrsa', Georgia, serif;
-      background: #f5f3ef;
-      color: #2c2c2c;
+      background: #2c2c2c;
+      color: #f5f3ef;
       cursor: default;
       user-select: none;
       -webkit-user-select: none;
@@ -50,7 +50,7 @@
     .author {
       font-size: clamp(1rem, 3vw, 1.4rem);
       font-style: italic;
-      color: #666;
+      color: #999;
       font-weight: 300;
     }
   </style>
