--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="">
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
   <title>Daily Stoic Quote</title>
   <style>
     @font-face {
@@ -91,6 +96,98 @@
         showDailyQuote();
         document.body.addEventListener('click', showRandomQuote);
       });
+
+    const iconSize = 192;
+    const manifest = {
+      name: 'Daily Stoic Quote',
+      short_name: 'Stoic Quote',
+      display: 'standalone',
+      theme_color: '#2c2c2c',
+      background_color: '#2c2c2c',
+      start_url: window.location.href.split('?')[0].split('#')[0],
+    };
+
+    (async function() {
+      const svgIconLink = document.querySelector('link[rel="icon"]');
+      const pngDataUrl = await svgToPng(svgIconLink.href, iconSize);
+
+      setIcon("link[rel='icon']", pngDataUrl, iconSize);
+      setIcon("link[rel='apple-touch-icon']", pngDataUrl);
+
+      manifest.icons = [{
+        src: pngDataUrl,
+        sizes: `${iconSize}x${iconSize}`,
+        type: 'image/png'
+      }];
+      setManifest(manifest);
+
+      const startupImageDataUrl = await createStartupImage(
+        svgIconLink.href,
+        manifest.background_color
+      );
+      const startupLink = document.createElement('link');
+      startupLink.rel = 'apple-touch-startup-image';
+      startupLink.href = startupImageDataUrl;
+      document.head.appendChild(startupLink);
+    })();
+
+    function setManifest(manifest) {
+      const link = document.createElement('link');
+      link.rel = 'manifest';
+      const b64manifest = btoa(JSON.stringify(manifest));
+      link.href = "data:application/json;base64," + b64manifest;
+      document.head.appendChild(link);
+    }
+
+    function setIcon(query, iconurl, size) {
+      const iconLink = document.querySelector(query);
+      iconLink.href = iconurl;
+      iconLink.type = 'image/png';
+      if (size) {
+        iconLink.setAttribute('sizes', `${size}x${size}`);
+      }
+    }
+
+    function svgToPng(svgUrl, size) {
+      return new Promise((resolve, reject) => {
+        const img = new Image();
+        img.onload = function() {
+          const canvas = document.createElement('canvas');
+          canvas.width = size;
+          canvas.height = size;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(img, 0, 0, size, size);
+          resolve(canvas.toDataURL('image/png'));
+        };
+        img.onerror = reject;
+        img.src = svgUrl;
+      });
+    }
+
+    function createStartupImage(svgUrl, bgColor) {
+      return new Promise((resolve, reject) => {
+        const img = new Image();
+        img.onload = () => {
+          const dpr = window.devicePixelRatio || 1;
+          const canvas = document.createElement('canvas');
+          canvas.width = window.screen.width * dpr;
+          canvas.height = window.screen.height * dpr;
+          const ctx = canvas.getContext('2d');
+
+          ctx.fillStyle = bgColor;
+          ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+          const iconDisplaySize = canvas.width * 0.25;
+          const x = (canvas.width - iconDisplaySize) / 2;
+          const y = (canvas.height - iconDisplaySize) / 2;
+          ctx.drawImage(img, x, y, iconDisplaySize, iconDisplaySize);
+
+          resolve(canvas.toDataURL('image/png'));
+        };
+        img.onerror = reject;
+        img.src = svgUrl;
+      });
+    }
   </script>
 </body>
 </html>
