Added meta tags, screenshot to app & README.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <link rel="apple-touch-icon" href="">
   <link rel="icon" href="icon.svg" type="image/svg+xml">
   <title>Daily Stoic Quote</title>
+  <meta name="description" content="Daily quote from the stoics.">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Daily Stoic Quote">
+  <meta name="twitter:description" content="Daily quote from the stoics.">
+  <meta name="twitter:image" content="screenshot.png">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Daily Stoic Quote">
+  <meta property="og:description" content="Daily quote from the stoics.">
+  <meta property="og:image" content="screenshot.png">
   <style>
     @font-face {
       font-family: 'Yrsa';
