Remove click-for-new-quote function.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       .then(data => {
         quotes = data;
         showDailyQuote();
-        document.body.addEventListener('click', showRandomQuote);
+        // document.body.addEventListener('click', showRandomQuote);
       });
 
     const iconSize = 192;
