--- a/index.html
+++ b/index.html
@@ -80,24 +80,60 @@
   </div>
   <script>
     let quotes = [];
-    function seededRandom(seed) {
-      const x = Math.sin(seed) * 10000;
-      return x - Math.floor(x);
+
+    function localDayIndex(now = new Date()) {
+      const y = now.getFullYear();
+      const m = now.getMonth();
+      const d = now.getDate();
+      return Math.floor(Date.UTC(y, m, d) / 86400000);
     }
-    function getDateSeed() {
-      const now = new Date();
-      return now.getFullYear() * 10000 + (now.getMonth() + 1) * 100 + now.getDate();
+
+    function mulberry32(seed) {
+      let a = seed >>> 0;
+
+      return function rand() {
+        a = (a + 0x6d2b79f5) >>> 0;
+        let t = a;
+        t = Math.imul(t ^ (t >>> 15), t | 1);
+        t ^= t + Math.imul(t ^ (t >>> 7), t | 61);
+        return ((t ^ (t >>> 14)) >>> 0) / 4294967296;
+      };
     }
+
+    function shuffledIndicesForCycle(cycle, n) {
+      const a = Array.from({ length: n }, (_, i) => i);
+      const rand = mulberry32(cycle);
+
+      for (let i = n - 1; i > 0; i--) {
+        const j = Math.floor(rand() * (i + 1));
+        [a[i], a[j]] = [a[j], a[i]];
+      }
+
+      return a;
+    }
+
+    function quoteIndexForDay(dayIndex, n) {
+      const cycle = Math.floor(dayIndex / n);
+      const offset = dayIndex % n;
+      const perm = shuffledIndicesForCycle(cycle, n);
+      return perm[offset];
+    }
+
     function displayQuote(index) {
       const q = quotes[index];
       document.getElementById('quote').textContent = '"' + q.text + '"';
       document.getElementById('author').textContent = '— ' + q.author;
     }
+
     function showDailyQuote() {
-      const seed = getDateSeed();
-      const index = Math.floor(seededRandom(seed) * quotes.length);
+      const n = quotes.length;
+      if (!n) return;
+
+      const dayIndex = localDayIndex();
+      const index = quoteIndexForDay(dayIndex, n);
       displayQuote(index);
     }
+
     function showRandomQuote() {
       const index = Math.floor(Math.random() * quotes.length);
       displayQuote(index);
